<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question4_title"
            android:textSize="@dimen/Titles"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/Info"
            android:text="@string/question_4"
            android:layout_weight="1"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
        <RadioButton
            android:text="@string/purple"
            android:textSize="@dimen/Info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/purple"
            android:layout_weight="1"/>
        <RadioButton
            android:text="@string/orange"
            android:textSize="@dimen/Info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/orange"
            android:layout_weight="1"/>
        <RadioButton
            android:text="@string/brown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/brown"
            android:layout_weight="1"/>
        <RadioButton
            android:text="@string/black"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/black"
            android:layout_weight="1"/>
        </RadioGroup>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_button"
            android:onClick="question1Submit"
            android:layout_weight="1"/>
    </LinearLayout>
</ScrollView>