<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question3_title"
            android:textSize="@dimen/Titles"
            android:layout_weight="1"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/Info"
            android:text="@string/questions_3"
            android:layout_weight="1"/>
        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1">
        <RadioButton
            android:text="@string/False"
            android:textSize="@dimen/Info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/False"
            android:layout_weight="1"/>
        <RadioButton
            android:text="@string/True"
            android:textSize="@dimen/Info"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/True"
            android:layout_weight="1"/>
        </RadioGroup>
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit_button"
            android:onClick="question1Submit"
            android:layout_weight="1"/>
    </LinearLayout>
</ScrollView>